# upload_podcast_to_youtube

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/src/: lib.rs  main.rs
cef-host/: Cargo.toml
cef-host/src/: lib.rs  main.rs
cef-host/src/mac/: mod.rs
cef-host/src/shared/: app.rs  commands.rs  handler.rs  mod.rs  rpc.rs  state.rs  views.rs
nginx/: Dockerfile
nginx/scripts/: docker-entrypoint-extra.sh
nginx/templates/: default.conf.template
scripts/: build-cef-host.sh  build-release.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cef.rs  lib.rs  main.rs
